--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,35 +2,36 @@ name: Build and Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # 推送 main 分支触发部署，可根据需要修改为其他分支
+      - main  # 推送 main 分支触发部署，可按需修改
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: 拉取代码
         uses: actions/checkout@v4
-        
+
       - name: 配置 Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20  # 根据项目需求选择 Node 版本
-          cache: 'pnpm'     # 缓存 pnpm 依赖，加速后续构建
-          
-      - name: 安装 pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8        # 指定 pnpm 版本
-          run_install: false  # 不自动安装依赖，我们会在下一步手动执行
-          
-      - name: 安装依赖
+          node-version: 20  # 按需调整 Node.js 版本
+          cache: 'npm'      # 先缓存 npm，后续用它装 pnpm（或保持原 cache 逻辑，看需求）
+
+      - name: 安装 pnpm（关键修复：显式安装 pnpm）
+        run: npm install -g pnpm  # 用 npm 全局装 pnpm，确保环境识别
+        # 或用官方 action（更推荐，适配性更好）：
+        # uses: pnpm/action-setup@v2  
+        # with:
+        #   version: 8  
+
+      - name: 安装依赖（改用 pnpm）
         run: pnpm install
-        
+
       - name: 构建项目
-        run: pnpm build:client  # 执行客户端构建命令，根据实际项目修改
-        
+        run: pnpm build:client  # 替换为你实际的构建命令，如 pnpm run build
+
       - name: 部署到 GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub 自动注入的 token
-          BRANCH: gh-pages        # 部署到 gh-pages 分支
-          FOLDER: dist            # 构建输出目录，根据实际项目修改
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          BRANCH: gh-pages     # 部署到 gh-pages 分支
+          FOLDER: dist         # 构建输出目录，按需修改（如 build、dist 等）
