--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # 推送 main 分支触发部署，可按需修改
+      - main  # 推送 main 分支触发部署
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -13,25 +13,22 @@ jobs:
       - name: 配置 Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20  # 按需调整 Node.js 版本
-          cache: 'npm'      # 先缓存 npm，后续用它装 pnpm（或保持原 cache 逻辑，看需求）
+          node-version: 20
+          cache: 'pnpm'  # 使用 pnpm 缓存（即使没有锁文件也可缓存）
+          cache-dependency-path: '**/pnpm-lock.yaml'  # 指定 pnpm 锁文件路径（若无则忽略）
 
-      - name: 安装 pnpm（关键修复：显式安装 pnpm）
-        run: npm install -g pnpm  # 用 npm 全局装 pnpm，确保环境识别
-        # 或用官方 action（更推荐，适配性更好）：
-        # uses: pnpm/action-setup@v2  
-        # with:
-        #   version: 8  
+      - name: 安装 pnpm
+        run: npm install -g pnpm  # 全局安装 pnpm
 
-      - name: 安装依赖（改用 pnpm）
-        run: pnpm install
+      - name: 安装依赖（不依赖锁文件）
+        run: pnpm install --no-lockfile  # 关键修改：跳过锁文件检查
 
       - name: 构建项目
-        run: pnpm build:client  # 替换为你实际的构建命令，如 pnpm run build
+        run: pnpm build:client  # 执行构建命令
 
       - name: 部署到 GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-          BRANCH: gh-pages     # 部署到 gh-pages 分支
-          FOLDER: dist         # 构建输出目录，按需修改（如 build、dist 等）
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist  # 构建输出目录，根据实际项目修改
